--- a/app/views/import_files/index.html.erb
+++ b/app/views/import_files/index.html.erb
@@ -4,46 +4,63 @@
     <%= link_to 'Nova Importação', new_import_file_path, class: "btn btn-primary" %>
 </div>
 
-<div class="card">
-  <div class="card-body">
-    <h5 class="card-title">Total de vendas</h5>
-    <p class="card-text">
-      <%= number_to_currency @total_amount %>
-    </p>
+<section>
+  <div class="row">
+    <div class="col-12">
+      <div class="card">
+        <div class="card-body">
+          <div class="row mt-3 mb-3">
+            <div class="col-6">
+              <h4 class="text-center">Total de vendas</h5>
+              <p class="text-center">
+                <%= import_total_amount %>
+              </p>
+            </div>
+            <div class="col-6">
+              <h4 class="text-center">Ultima Importação</h5>
+              <p class="text-center">
+                <%= import_last_import_amount %>
+              </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+</section>
 
-<div id="import-list">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Descrição</th>
-          <th colspan="2"></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @import_files.each do |file| %>
+<section>
+  <div id="import-list mt-3">
+      <table class="table table-striped">
+        <thead>
           <tr>
-            <td><%= file.id %></td>
-            <td><%= import_title(file) %></td>
-            <td>
-              <%= link_to file, class: "btn btn-success" do %>
-                <span>
-                  <i class="bi bi-search"></i>
-                </span>
-              <%end%>
-            </td>
-            <td>
-              <%= link_to file, method: :delete, class: "btn btn-danger", data: { confirm: 'Are you sure?' }  do %>
-                <span>
-                  <i class="bi bi-trash"></i>
-                </span>
-              <%end%>
-            </td>
+            <th>ID</th>
+            <th>Descrição</th>
+            <th colspan="2"></th>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
-</div>
+        </thead>
+
+        <tbody>
+          <% @import_files.each do |file| %>
+            <tr>
+              <td><%= file.id %></td>
+              <td><%= import_title(file) %></td>
+              <td>
+                <%= link_to file, class: "btn btn-success" do %>
+                  <span>
+                    <i class="bi bi-search"></i>
+                  </span>
+                <%end%>
+              </td>
+              <td>
+                <%= link_to file, method: :delete, class: "btn btn-danger", data: { confirm: 'Are you sure?' }  do %>
+                  <span>
+                    <i class="bi bi-trash"></i>
+                  </span>
+                <%end%>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+  </div>
+</section>
