--- a/app/views/import_files/index.html.erb
+++ b/app/views/import_files/index.html.erb
@@ -11,16 +11,16 @@
         <div class="card-body">
           <div class="row mt-3 mb-3">
             <div class="col-6">
-              <h4 class="text-center">Total de vendas</h5>
-              <p class="text-center">
+              <h4 class="text-center">Total de vendas</h4>
+              <h5 class="text-center">
                 <%= import_total_amount(@import_files) %>
-              </p>
+              </h5>
             </div>
             <div class="col-6">
-              <h4 class="text-center">Ultima Importação</h5>
-              <p class="text-center">
+              <h4 class="text-center">Última Importação</h4>
+              <h5 class="text-center">
                 <%= import_last_import_amount(@import_files.last) %>
-              </p>
+              </h5>
           </div>
         </div>
       </div>
